book-catalogue.yaml
kind: Service
apiVersion: v1
metadata:
  name:  book-catalogue-svc
spec:
  selector:
    app:  book-catalogue-app
  type: ClusterIP
  ports:
   - port:  80
     targetPort:  9001
     protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-catalogue-app
  labels:
    app: book-catalogue-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-catalogue-app
  template:
    metadata:
      labels:
        app: book-catalogue-app
    spec:
      containers:
      - name: book-catalogue-app
        image: cloudnative10/book-catalogue:k8s
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /book/listRandom
            port: 9001
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /book/listRandom
            port: 9001
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort: 9001
