cart-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cart-service-svc
spec:
  selector:
    app:  cart-service-app
  type: ClusterIP
  ports:
   - port:  80
     targetPort:  9004
     protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service-app
  labels:
    app: cart-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-service-app
  template:
    metadata:
      labels:
        app: cart-service-app
    spec:
      containers:
      - name: cart-service-app
        image: cloudnative10/cart-wishlist-service:k8s
        imagePullPolicy: Always
        # livenessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 9004
        #   initialDelaySeconds: 90
        #   timeoutSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 9004
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 10
        ports:
        - containerPort: 9004
