inventory-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: inventory-service-svc
  labels:
    app: inventory-service-app
spec:
  selector:
    app:  inventory-service-app
  type: ClusterIP 
  ports:
    - port:  80
      targetPort:  9002
      protocol: TCP

 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service-app
  labels:
    app: inventory-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service-app
  template:
    metadata:
      labels:
        app: inventory-service-app
    spec:
      containers:
      - name: inventory-service-app
        resources:
          requests:
            cpu: "285m"
            memory: "292Mi"
          limits:
            memory: "400Mi"
            cpu: "1000m"
        image: cloudnative10/inventory-service:k8s
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /stock/seller/list/9791500638824
            port: 9002
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /stock/seller/list/9791500638824
            port: 9002
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort: 9002
