review-rating.yaml
kind: Service
apiVersion: v1
metadata:
  name:  rating-review-svc
spec:
  selector:
    app:  rating-review-app
  type: ClusterIP
  ports:
   - port:  80
     targetPort:  9003
     protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-review-app
  labels:
    app: rating-review-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating-review-app
  template:
    metadata:
      labels:
        app: rating-review-app
    spec:
      containers:
      - name: rating-review-app
        image: cloudnative10/rating-review-service:0
        imagePullPolicy: Always
        # livenessProbe:
        #   httpGet:
        #     path: /ratingreview/'good'
        #     port: 9003
        #   initialDelaySeconds: 90
        #   timeoutSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /ratingreview/'good'
        #     port: 9003
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 10
        ports:
        - containerPort: 9003
