Ingress-fet.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular
spec:
  rules:
    - host: superbooks.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-svc
                port:
                  number: 4200
