ingress-eureka.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eureka
spec:
  rules:
    - host: eureka
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eureka
                port:
                  number: 8761
